# rhminer

./: .gitignore  BuildInfo.h  CHANGELOG.md  CMakeLists.txt  HISTORY.md  LICENSE  LICENSE.md  README.md  rhminer.sln
CMake/: FindJson.cmake  flags.cmake
MinersLib/: CLMinerBase.cpp  CLMinerBase.h  CPUMiner.h  CudaHostMinerProxy.h  Farm.cpp  Farm.h  GenericCLMiner.cpp  GenericCLMiner.h  GenericFarmClient.h  GenericMinerClient.cpp  GenericMinerClient.h  Global.cpp  Global.h  GpuManager.cpp  GpuManager.h  KernelOffsetManager.cpp  KernelOffsetManager.h  Miner.cpp  Miner.h  StratumClient.cpp  StratumClient.h  wrapadl.cpp  wrapamdsysfs.cpp  wrapnvml.cpp
MinersLib/Algo/: Pascal.cpp  blake.cpp  blake2b.cpp  blake2b.h  blake2s.cpp  blake2s.h  haval-helper.cpp  haval.cpp  sha0.cpp  sha1.cpp  sha2.cpp  sph-haval.h  sph_blake.h  sph_panama.cpp  sph_panama.h  sph_sha2.h  sph_types.h
MinersLib/Pascal/: PascalCommon.h  RandomHash.h  RandomHashCLMiner.cpp  RandomHashCLMiner.h  RandomHashCPUMiner.cpp  RandomHashCPUMiner.h  RandomHashHostCudaMiner.cpp  RandomHashHostCudaMiner.h  RandomHash_Blake2b.h  RandomHash_Blake2s.h  RandomHash_Cpu.cpp  RandomHash_Ghost.h  RandomHash_Ghost3411.h  RandomHash_Grindahl256.h  RandomHash_Grindahl512.h  RandomHash_HAS160.h  RandomHash_Haval.h  RandomHash_Haval_5_256.h  RandomHash_MD2.h  RandomHash_MD4.h  RandomHash_MD5.h  RandomHash_MurMur3_32.h  RandomHash_MurMur3_32_def.h  RandomHash_Panama.h  RandomHash_RIPEMD.h  RandomHash_RIPEMD128.h  RandomHash_RIPEMD160.h  RandomHash_RIPEMD256.h  RandomHash_RIPEMD320.h  RandomHash_RadioGatun32.h  RandomHash_SHA.h  RandomHash_SHA2_256.h  RandomHash_SHA2_512.h  RandomHash_SHA3_512.h  RandomHash_Snefru_8_256.h  RandomHash_Tiger2_5_192.h  RandomHash_Whirlpool.h  RandomHash_core.h  RandomHash_def.h  RandomHash_inl.h  (+2 more)
Release/: API.txt  README.md  config.txt  config.xml  cpu-pool-mining-config.bat  cpu-pool-mining.bat  cpu-solo-mining.bat  gpu-pool-mining-config.bat  gpu-pool-mining.bat  gpu-solo-mining.bat  pool-mining-config.sh  pool-mining.bat  pool-mining.sh  reboot.bat  reboot.sh  solo-mining.bat  solo-mining.sh  solomining-mainnet .sh  solomining-mainnet.bat  solomining-testnet.bat  solomining-testnet.sh  stratum-mining-multi-gpu.bat  stratum-mining-multi-gpu.sh
Release/Linux/: rhminer_md5.txt
Release/Windows/: rhminer_md5.txt
corelib/: Common.h  CommonData.cpp  CommonData.h  FixedHash.cpp  FixedHash.h  Guards.h  Log.cpp  Log.h  PascalWork.cpp  PascalWork.h  Worker.cpp  Worker.h  basetypes.h  boostext.h  int128_o.cpp  int128_o.h  miniweb.cpp  miniweb.h  rh_compiler.h  rh_endian.h  utils.cpp  utils.h  vector_ref.h
cudalib/: CMakeLists.txt  RandomHashCUDAMiner.cpp  RandomHashCUDAMiner.h  RandomHash_Cuda.cu  cuda_common.h  cuda_helper.h  cuda_host_helper.h  cudalib.vcxproj  precomp.cpp  precomp.h
rhminer/: ClientManager.cpp  ClientManager.h  CommandLineManager.cpp  CommandLineManager.h  main.cpp  main_ssaver.cpp  precomp.h  resource.h  rhminer.rc  rhminer.vcxproj
